@@ -279,6 +279,11 @@
     border-color: $color-grey-3;
     color: $color-grey-2;
     cursor: default;
+    @media (forced-colors: active) {
+      color: GrayText;
+      border-color: GrayText;
+      border-style: dashed;
+    }
   }
 
   &.button-secondary:disabled,
