@@ -55,6 +55,7 @@ In Wagtail 2.16, we introduced support for Windows High Contrast mode (WHCM). Th
 * Make checkboxes visible in forced colors mode
 * Display the correct color for icons in forced colors mode
 * Add a border around modal dialogs so they can be identified in forced colors mode
+* Ensure disabled buttons are distinguishable from active buttons in forced colors mode
 
 ### Other features
 
